Updated nav class to have a fixed position and z-index of 21.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,6 +5,12 @@ nav {
   padding: 1.5em;
   display: flex;
   justify-content: space-between;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 21;
 }
 
 #logo {
